Implemented transaction while creating a journal entry along with MongoDB Atlas integration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
-spring.application.name=JournalApplication
-spring.data.mongodb.host=localhost
+spring.data.mongodb.uri=mongodb+srv://aayushsaud:CClSHZnEC6JQFCVo@cluster0.oy8h4.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=JournalDatabase
 spring.data.mongodb.auto-index-creation=true
