Implemented Spring Security with User Authentication

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.data.mongodb.uri=mongodb+srv://aayushsaud:CClSHZnEC6JQFCVo@cluster0.oy8h4
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=JournalDatabase
 spring.data.mongodb.auto-index-creation=true
+spring.main.allow-circular-references=true
